# se-cpp-server

./: .gitignore  CMakeLists.txt  cmake_gen_lin.sh  cmake_gen_vs2019_x64.bat  cmake_gen_xcode.sh
src/se-server/: main.cpp
src/se-server/network/: Buffer.cpp  Buffer.h  NetworkInterface.cpp  NetworkInterface.h  P2PReceiveChannel.cpp  P2PReceiveChannel.h  SteamInterface.cpp  SteamInterface.h  VRageBitStream.cpp  VRageBitStream.h
src/se-server/network/p2p/: ControlChannel.cpp  ControlChannel.h  GameEventChannel.cpp  GameEventChannel.h  IP2PChannel.cpp  IP2PChannel.h  P2PPacket.cpp  P2PPacket.h  ProfilerDownloadChannel.cpp  ProfilerDownloadChannel.h  VoiceChatChannel.cpp  VoiceChatChannel.h  WorldDownloadChannel.cpp  WorldDownloadChannel.h
src/se-server/player/: Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h
src/se-server/util/: CPP20Util.h  EndianUtility.cpp  EndianUtility.h  LogUtility.cpp  LogUtility.h  NetworkUtility.cpp  NetworkUtility.h
